package NProto;

import "mapreduce/yt/interface/protos/extension.proto";

message TStateRow {
    optional string Name = 1    [(NYT.key_column_name) = "Name"];
    optional bytes State = 2    [(NYT.column_name) = "State"];
}
